[package]
name = "discord_bot"
version = "0.1.0"
edition = "2021"

[profile.release]
incremental = true

[profile.dev]
incremental = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

serde_yaml = "0.9.16"
serde = "1.0.151"

tectonic = "0.12.0"
tectonic_bridge_core = "0.3.1"
tectonic_bundles = "0.3.0"

magick_rust = "0.17.0"

serenity = { version="0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache", "framework", "standard_framework"] }
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"

songbird = "0.3.0"

tokio = { version="1.21.2", features = ["macros", "rt-multi-thread", "signal"] }
